<resources>
    <string name="app_name">AppTrabajo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Lista Clientes</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Lista Productos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_cliente">Nombre Cliente</string>
    <string name="registro">Registro Cliente</string>
    <string name="Numero_de_Telefono">Numero de Telefono</string>
    <string name="Direccion">Direccion</string>
    <string name="especialidad">Avilidad</string>
    <string name="request_button">Solicitar</string>
    <string name="message_no_schedules">No hay Peedidos</string>
    <string name="ver_detalle">Ver detalle</string>
    <string name="lista_producto">Lista Producto</string>
    <string name="perfil">Perfil</string>
    <string name="fragment_perfil">Perfil de Usuario</string>
    <string name="idCliente">Id Cliente</string>

    <string name="mapbox_access_token">MAPBOX_ACCESS_TOKEN</string>
    <string name="click_instructions">Instrucciones</string>
    <string name="only_twelve_stops_allowed" />
    <string name="no_success" />
    <string name="successful_but_no_routes" />
    <string name="null_in_response" />
    <string name="access_token">pk.eyJ1IjoiY2FyMDEiLCJhIjoiY2tnbGNtajRqMDFraDJ5bnVpeWRqam5yeSJ9.q0qvBDseNsXwnqoL5A45VA</string>
    <string name="new_location">Nueva Hubicacion</string>
    <string name="user_location_permission_not_granted">Permiso Denegado</string>
    <string name="user_location_permission_explanation">Permiso</string>

    <string-array name="dias">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
    </string-array>

    <!-- Strings de diálogo personalizado -->
    <string name="info_text">Necesitas tener creada una cuenta para iniciar la aplicación</string>
    <string name="crear_boton">CREAR CUENTA</string>
    <string name="nombre_input">Nombre</string>
    <string name="contrasena_input">Constraseña</string>
    <string name="recordar_check">Recordarme</string>
    <string name="olvidar_text">¿Olvidaste tu Contraseña?</string>
    <string name="entrar_boton">ENTRAR</string>
    <string name="cliente_label">Cliente</string>
    <string name="producto_label">Producto</string>
    <string name="fecha_label">Fecha</string>
    <string name="prioridad_label">Prioridad</string>
    <string name="notas_label">Notas</string>
    <string name="notas_hint">Notas</string>
    <string name="comunicado">Comunicados</string>
    <string name="telefono">Telefono</string>
    <string name="action_send">Enviar</string>
    <string name="prompt_message">mensage</string>
    <string name="actualizar_pro">Actualizar Producto</string>
    <string name="actualizar_cli">Actualizar Clientes</string>
    <string name="activity_vistas">Lista Clientes</string>
    <string name="SelectEmpleado">Selecciona el Cargo al que va dirigido tu comentario</string>
    <string name="Fecha">"Fecha "</string>
    <string name="comentario">Escribe tu mensaje</string>
    <string name="publica">Publica tu comentario</string>
    <string name="titulo">Escribe un titulo para tu comentario</string>
    <string-array name="clientes">
        <item>Fernando Jimenez</item>
        <item>Carlos Fuentes</item>
        <item>Pedro Lopez</item>
    </string-array>
    <string-array name="productos">
        <item>Seguro A</item>
        <item>Seguro B</item>
        <item>Seguro C</item>
    </string-array>
    <string-array name="prioridades">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>
</resources>