<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_perfilEmpleado">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.apptrabajo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.apptrabajo.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.apptrabajo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_registroClienteFragment"
        android:name="com.example.apptrabajo.RegistroClienteFragment"
        android:label="@string/registro"
        tools:layout="@layout/fragment_registro_cliente" />
    <fragment
        android:id="@+id/nav_perfilFragment"
        android:name="com.example.apptrabajo.PerfilFragment"
        android:label="@string/fragment_perfil"
        tools:layout="@layout/activity_ubicacion" />
    <fragment
        android:id="@+id/nav_mostrarDetalle"
        android:name="com.example.apptrabajo.MostrarDetalle"
tools:layout="@layout/mostrar_detalle"
        android:label="MostrarDetalle" />
    <fragment
        android:id="@+id/nav_perfilEmpleado"
        tools:layout="@layout/perfil_empleado"
        android:name="com.example.apptrabajo.PerfilEmpleadoFragment"
        android:label="@string/perfil" />
    <fragment
        android:id="@+id/nav_comunicadosFragment"
        android:name="com.example.apptrabajo.ComunicadosFragment"
        android:label="fragmen_comunicados"
        tools:layout="@layout/fragmen_comunicados" />
    <activity
        android:id="@+id/ubicacionActivity"
        android:name="com.example.apptrabajo.UbicacionActivity"
        android:label="UbicacionActivity" />

    <fragment
        android:id="@+id/nav_vistasActivity"
        android:name="com.example.apptrabajo.VistasActivity"
        android:label="@string/activity_vistas"
        tools:layout="@layout/activity_vistas" />


</navigation>