<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_perfilEmpleado"
            android:icon="@drawable/ic_person"
            android:title="@string/perfil" />

        <item
            android:id="@+id/nav_registroClienteFragment"
            android:icon="@drawable/ic_edit"
            android:title="@string/registro" />

        <item
            android:id="@+id/nav_comunicadosFragment"
            android:icon="@drawable/ic_comunicadso"
            android:title="@string/comunicado" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_lista"
            android:title="@string/lista_producto" />

        <item
            android:id="@+id/nav_vistasActivity"
            android:icon="@drawable/ic_comunicadso"
            android:title="@string/comunicado" />

    </group>
</menu>