<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">


        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/registro"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent2"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText

                android:id="@+id/edt_nombre"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/nombre_cliente"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent2"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/edt_telefono"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/Numero_de_Telefono"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent2"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText

                android:id="@+id/edt_direccion"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/Direccion"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent2"
            android:textColorHint="@color/black"
            android:hint="Selecciona dia de Visita"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/dias"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button

            android:id="@+id/btn_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="15dp"
            android:layout_marginTop="20dp"
            android:text="Registrar Cliene"
            app:backgroundTint="#4593E1" />

    </LinearLayout>
</androidx.cardview.widget.CardView>