<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:stretchColumns="1">

            <TableRow android:background="#128675">

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="@dimen/signup_text_margin_top"
                    android:layout_weight="1"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#1C1A1A"
                    app:endIconTint="#163194"
                    app:helperText="Nombre del Cliente"
                    app:hintTextColor="#0288D1">

                    <TextView

                        android:id="@+id/dtNombre"
                        style="@style/modifiedEditText"
                        android:hint="@string/nombre_cliente"
                        android:maxLines="1"
                        android:textColor="#121010" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginTop="@dimen/signup_text_margin_top"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#1C1A1A"
                    app:endIconTint="#163194"
                    app:helperText="@string/idCliente"
                    app:hintTextColor="#0288D1">

                    <TextView
                        android:id="@+id/dtIdCliente"
                        style="@style/modifiedEditText"
                        android:hint="@string/idCliente"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        tools:ignore="TextViewEdits" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginTop="@dimen/signup_text_margin_top"
                    android:layout_weight="1"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#1C1A1A"
                    app:endIconTint="#163194"
                    app:helperText="@string/Numero_de_Telefono"
                    app:hintTextColor="#0288D1">

                    <TextView
                        android:id="@+id/dtTelefono"
                        style="@style/modifiedEditText"
                        android:hint="@string/Numero_de_Telefono"
                        android:inputType="text"
                        android:maxLines="1"
                        tools:ignore="TextViewEdits" />
                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <TableRow>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginTop="@dimen/signup_text_margin_top"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#1C1A1A"
                    app:endIconTint="#163194"
                    app:helperText="@string/Direccion"
                    app:hintTextColor="#0288D1">

                    <TextView

                        android:id="@+id/dtDireccion"
                        style="@style/modifiedEditText"
                        android:hint="@string/Direccion"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        tools:ignore="TextViewEdits" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_marginTop="@dimen/signup_text_margin_top"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#1C1A1A"
                    app:endIconTint="#163194"
                    app:helperText="No. de Venta"
                    app:hintTextColor="#0288D1">

                    <TextView
                        android:id="@+id/IdVenta"
                        style="@style/modifiedEditText"
                        android:hint="Id venta"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        tools:ignore="TextViewEdits" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_marginTop="@dimen/signup_text_margin_top"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="#1C1A1A"
                    app:endIconTint="#163194"
                    app:helperText="Total Venta"
                    app:hintTextColor="#0288D1">

                    <TextView

                        android:id="@+id/dtTotalVenta"
                        style="@style/modifiedEditText"
                        android:hint="@string/Direccion"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        tools:ignore="TextViewEdits" />
                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

        </TableLayout>


        <LinearLayout
            android:id="@+id/cabecera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tab"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/centro"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/cabecera"
            android:layout_centerInParent="true"
            android:background="@null" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lista_venta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/centro"
            android:paddingBottom="8dp" />

    </RelativeLayout>

</ScrollView>